--- a/MedOffice.csproj
+++ b/MedOffice.csproj
@@ -166,34 +166,34 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DepartmentsController.cs" />
-    <Compile Include="Controllers\DoctorDetailsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LocationDepartmentsController.cs" />
     <Compile Include="Controllers\LocationsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202206011148207_Initial.cs" />
-    <Compile Include="Migrations\202206011148207_Initial.designer.cs">
-      <DependentUpon>202206011148207_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\202206081226544_Initial.cs" />
+    <Compile Include="Migrations\202206081226544_Initial.designer.cs">
+      <DependentUpon>202206081226544_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Appointment.cs" />
     <Compile Include="Models\Department.cs" />
-    <Compile Include="Models\DoctorDetails.cs" />
+    <Compile Include="Models\Doctor.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Investigation.cs" />
     <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\LocationDepartment.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\MedOfficeDatabase.mdf" />
-    <Content Include="App_Data\MedOfficeDatabase_log.ldf">
-      <DependentUpon>MedOfficeDatabase.mdf</DependentUpon>
+    <Content Include="App_Data\DatabaseMed.mdf" />
+    <Content Include="App_Data\DatabaseMed_log.ldf">
+      <DependentUpon>DatabaseMed.mdf</DependentUpon>
     </Content>
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -375,9 +375,6 @@
     <Content Include="Views\Users\Index.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Users\Show.cshtml" />
-    <Content Include="Views\DoctorDetails\Index.cshtml" />
-    <Content Include="Views\DoctorDetails\Show.cshtml" />
-    <Content Include="Views\DoctorDetails\Edit.cshtml" />
     <Content Include="Views\Locations\Index.cshtml" />
     <Content Include="Views\Locations\Show.cshtml" />
     <Content Include="Views\Locations\New.cshtml" />
@@ -386,11 +383,8 @@
     <Content Include="Views\Departments\Edit.cshtml" />
     <Content Include="Views\Departments\Show.cshtml" />
     <Content Include="Views\Departments\New.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\202206011148207_Initial.resx">
-      <DependentUpon>202206011148207_Initial.cs</DependentUpon>
-    </EmbeddedResource>
+    <Content Include="Views\LocationDepartments\Index.cshtml" />
+    <Content Include="Views\LocationDepartments\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -399,6 +393,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202206081226544_Initial.resx">
+      <DependentUpon>202206081226544_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
