--- a/Web.config
+++ b/Web.config
@@ -9,7 +9,7 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DBConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='D:\Facultate\Anul 3\Licenta\MedOffice\App_Data\MedOfficeDatabase.mdf';Integrated Security=True"/>
+    <add name="DBConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='D:\Facultate\Anul 3\Licenta\MedOffice\App_Data\DatabaseMed.mdf';Integrated Security=True"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
