--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap.sass" version="5.1.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
   <package id="GoogleMaps.LocationServices" version="1.2.0.5" targetFramework="net461" />
+  <package id="Jmelosegui.Mvc.Googlemap" version="1.0.13" targetFramework="net461" />
   <package id="jQuery" version="3.6.0" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.19.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net461" />
