--- a/packages.config
+++ b/packages.config
@@ -7,6 +7,7 @@
   <package id="GoogleMaps.LocationServices" version="1.2.0.5" targetFramework="net461" />
   <package id="Jmelosegui.Mvc.Googlemap" version="1.0.13" targetFramework="net461" />
   <package id="jQuery" version="3.6.0" targetFramework="net461" />
+  <package id="jQuery.UI.Combined" version="1.13.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.19.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net461" />
